WebServAPI/mytests/CGI_Shell_wrongconfig.out
  File "./cgibin/hello.sh", line 1
    echo Hello from Shell!
         ^
SyntaxError: invalid syntax
